Got it working. Showing Pat how it's done.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">CBusHackIdea</string>
+    <string name="title_activity_temp">TempActivity</string>
 </resources>
