--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_to_delete">toDelete</string>
+    <string name="temperature">Temperature</string>
+    <string name="location">Location</string>
+    <string name="condition">Condition</string>
 </resources>
