--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,11 +12,7 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_maps">Discovery District Map</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_activity_to_delete">toDelete</string>
-
-    <string name="map_dialog_text">Select a marker on the map to get the locations title.  Select the title to be directed to the website.  Select a marker on the map and select the map button on the bottom for directions.</string>
+    <string name="map_dialog_text">Select a marker on the map to get the locations title.\nSelect the title to be directed to the website.\nSelect a marker on the map and select the map button on the bottom for directions.</string>
     <string name="map_dialog_checkbox">Don\'t Show Again</string>
 
     <string name="temperature">Temperature</string>
