--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="action_settings">Settings</string>
+    <string name="action_about">About</string>
     <string name="title_activity_maps">Discovery District Map</string>
 
     <string name="map_dialog_text">Select a marker on the map to get the locations title.\nSelect the title to be directed to the website.\nSelect a marker on the map and select the map button on the bottom for directions.</string>
@@ -18,5 +18,6 @@
     <string name="temperature">Temperature</string>
     <string name="location">Location</string>
     <string name="condition">Condition</string>
+    <string name="title_activity_about">About</string>
 
 </resources>
