Starting to get some work done on the parking

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,8 @@
     <string name="condition">Condition</string>
 
     <string name="title_activity_about">About</string>
+    <string name="title_activity_upcoming_events">Upcoming Events</string>
+    <string name="title_activity_parking">Parking Guage</string>
 
 
 </resources>
